...
        app:layout_constraintEnd_toStartOf="@+id/linearLayoutCompat2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.509">

        <TextView
            android:id="@+id/tv_date_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="date"
            tools:layout_editor_absoluteX="53dp"
            tools:layout_editor_absoluteY="35dp" />

...
