<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/ll_notePage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.note.ui.NoteFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
 <androidx.appcompat.widget.AppCompatEditText
     android:id="@+id/et_title_notePage"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn_cancel_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/CancelButton" />

        <Button
            android:id="@+id/btn_save_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/SaveButten" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
</layout>